--- a/src/ffmpeg/CMakeLists.txt
+++ b/src/ffmpeg/CMakeLists.txt
@@ -21,6 +21,8 @@ if(ENCODER)
                                      ffmpeg/ffmpeg_vid_encoder.cc)
   set(EASY_MEDIA_FFMPEG_SOURCE_FILES ${EASY_MEDIA_FFMPEG_SOURCE_FILES}
                                      ffmpeg/ffmpeg_aud_decoder.cc)
+  set(EASY_MEDIA_FFMPEG_SOURCE_FILES ${EASY_MEDIA_FFMPEG_SOURCE_FILES}
+                                     ffmpeg/ffmpeg_vid_decoder.cc)
 endif()
 
 if(FILTER)
