compile: support rk356x platform
1.fix warning in rk356x compile env.
2.Resolve the dependence on rkaiq through the macro switch
3.Resolve the dependence on 3A algorithm through the macro switch

Signed-off-by: Francis Fan <francis.fan@rock-chips.com>
Change-Id: If121b980a602680804df53f42e252a9c900d7f90

--- a/src/stream/audio/CMakeLists.txt
+++ b/src/stream/audio/CMakeLists.txt
@@ -30,13 +30,18 @@ if(ALSA_PLAYBACK OR ALSA_CAPTURE)
         stream/audio/alsa/alsa_capture_stream.cc)
   endif()
 
+  if(AUDIO_ALGORITHM)
+    set(EASY_MEDIA_STREAM_AUDIO_ALGO_LIBS RKAP_AEC RKAP_ANR RKAP_Common)
+    add_definitions(-DAUDIO_ALGORITHM_ENABLE)
+  endif()
 endif()
 
 set(EASY_MEDIA_STREAM_SOURCE_FILES
     ${EASY_MEDIA_STREAM_SOURCE_FILES} ${EASY_MEDIA_STREAM_ALSA_SOURCE_FILES}
     PARENT_SCOPE)
 set(EASY_MEDIA_STREAM_LIBS ${EASY_MEDIA_STREAM_LIBS}
-                           ${EASY_MEDIA_STREAM_ALSA_LIBS} PARENT_SCOPE)
+                           ${EASY_MEDIA_STREAM_ALSA_LIBS}
+                           ${EASY_MEDIA_STREAM_AUDIO_ALGO_LIBS} PARENT_SCOPE)
 
 # playback test ref to ogg/test/ogg_decode_test.cc
 
