--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -275,7 +275,7 @@ endif()
 #--------------------------
 add_executable(rkmedia_vi_double_cameras_test rkmedia_vi_double_cameras_test.c ${COMMON_SRC})
 add_dependencies(rkmedia_vi_double_cameras_test easymedia)
-target_link_libraries(rkmedia_vi_double_cameras_test easymedia)
+target_link_libraries(rkmedia_vi_double_cameras_test easymedia rga)
 target_include_directories(rkmedia_vi_double_cameras_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
 install(TARGETS rkmedia_vi_double_cameras_test RUNTIME DESTINATION "bin")
 
