--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -233,13 +233,13 @@ target_include_directories(rkmedia_vi_vo_test PRIVATE ${CMAKE_SOURCE_DIR}/includ
 install(TARGETS rkmedia_vi_vo_test RUNTIME DESTINATION "bin")
 
 #--------------------------
-#  rkmedia_vo_local_file_test
+#  rkmedia_vo_display_test
 #--------------------------
-add_executable(rkmedia_vo_local_file_test rkmedia_vo_local_file_test.c ${COMMON_SRC})
-add_dependencies(rkmedia_vo_local_file_test easymedia)
-target_link_libraries(rkmedia_vo_local_file_test easymedia)
-target_include_directories(rkmedia_vo_local_file_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
-install(TARGETS rkmedia_vo_local_file_test RUNTIME DESTINATION "bin")
+add_executable(rkmedia_vo_display_test rkmedia_vo_display_test.c ${COMMON_SRC})
+add_dependencies(rkmedia_vo_display_test easymedia)
+target_link_libraries(rkmedia_vo_display_test easymedia)
+target_include_directories(rkmedia_vo_display_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
+install(TARGETS rkmedia_vo_display_test RUNTIME DESTINATION "bin")
 
 #--------------------------
 #  rkmedia_vo_scale_test
