examples: organize sample code and add compilation dependencies
1. classified pressure test program and sample program
2. add compilation dependencies
3. fix some compilation errors

Signed-off-by: Francis Fan <francis.fan@rock-chips.com>
Change-Id: I193fc844ae73aa19455e316f00bf0bac8c31b25d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,10 @@ if(USE_RKAIQ)
     add_definitions(-DRKAIQ)
 endif()
 
+if(AUDIO_ALGORITHM)
+  add_definitions(-DAUDIO_ALGORITHM_ENABLE)
+endif()
+
 # ----------------------------------------------------------------------------
 # Build options
 # ----------------------------------------------------------------------------
