example: code independence
1.add string.h for memset
2.corect exit for rkmedia_vi_rga_test.c

Signed-off-by: allen.chen <allen.chen@rock-chips.com>
Change-Id: I062a5e47df4c31ffa27b44f940c66fce2cf7496b

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -298,7 +298,7 @@ if(V4L2_CAPTURE)
 link_directories(${PROJECT_SOURCE_DIR}/librtsp/)
 add_executable(rkmedia_vi_rknn_venc_rtsp_test rkmedia_vi_rknn_venc_rtsp_test.c ${COMMON_SRC})
 add_dependencies(rkmedia_vi_rknn_venc_rtsp_test easymedia)
-target_link_libraries(rkmedia_vi_rknn_venc_rtsp_test rtsp rknn_api m easymedia)
+target_link_libraries(rkmedia_vi_rknn_venc_rtsp_test rtsp rknn_api m easymedia rga)
 target_include_directories(rkmedia_vi_rknn_venc_rtsp_test PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SYSROOT}/usr/include/rknn)
 install(TARGETS rkmedia_vi_rknn_venc_rtsp_test RUNTIME DESTINATION "bin")
 install(FILES rtsp-nn.cfg DESTINATION share)
