examples: add rkmedia_vi_uvc_test
Signed-off-by: Zhihua Wang <hogan.wang@rock-chips.com>
Change-Id: I106bccd4ccfb3c119f0e71a130006ec7e19cc6b5

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -349,6 +349,17 @@ target_include_directories(rkmedia_vi_double_cameras_switch_test PRIVATE ${CMAKE
 install(TARGETS rkmedia_vi_double_cameras_switch_test RUNTIME DESTINATION "bin")
 endif() #if(DRM_DISPLAY)
 
+if(COMPILES_UVC_EXAMPLE)
+#--------------------------
+#  rkmedia_vi_uvc_test
+#--------------------------
+add_executable(rkmedia_vi_uvc_test rkmedia_vi_uvc_test.c ${COMMON_SRC})
+add_dependencies(rkmedia_vi_uvc_test easymedia)
+target_link_libraries(rkmedia_vi_uvc_test easymedia rkuvc glib-2.0)
+target_include_directories(rkmedia_vi_uvc_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
+install(TARGETS rkmedia_vi_uvc_test RUNTIME DESTINATION "bin")
+endif() #if(COMPILES_UVC_EXAMPLE)
+
 if(RKMPP_ENCODER)
 #--------------------------
 #  rkmedia_vi_multi_bind_test
