add COMPILES_UVC_EXAMPLE option
Signed-off-by: Zhihua Wang <hogan.wang@rock-chips.com>
Change-Id: Ieed949415599e2c85fd74bcb1a43fd23ba8ab16f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,3 +176,5 @@ if(COMPILES_EXAMPLES)
   enable_testing()
   add_subdirectory(examples)
 endif()
+
+option(COMPILES_UVC_EXAMPLE "Enable compiles uvc example" OFF)
